kubernetes/services/phpldapadmin.yml
---
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: phpldapadmin

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phpldapadmin
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`phpldapadmin.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: phpldapadmin
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  namespace: default
  labels:
    app: phpldapadmin
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      containers:
        - name: app
          image: osixia/phpldapadmin
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 80
